appId: ${APP_ID}
---
- repeat:
    times: 7
    commands:
        - tapOn:
            point: "50%,35%"
- assertVisible: "Developer settings"
- tapOn: "Yes"
- assertVisible: "Save"
- eraseText: 24
- inputText: ${ONLINE_ENDPOINT}
- hideKeyboard
- tapOn: "Save"
- assertVisible: "Log in"
