appId: ${APP_ID}
---
- assertVisible: "Log in"
- tapOn: "Log in"
- waitForAnimationToEnd
- inputText: ${LOGIN_EMAIL}
- assertVisible: ${LOGIN_EMAIL}
- pressKey: enter
- extendedWaitUntil:
    visible: ".*Enter the password for.*"
    timeout: 30000
- inputText: ${LOGIN_PASSWORD}
- pressKey: enter
- extendedWaitUntil:
    visible: "Settings"
    timeout: 120000
