appId: ${APP_ID}
---
- runFlow:
    when:
      notVisible: "Enter a setup key"
    commands:
      - tapOn: "Add code"
      - tapOn: "Enter details manually"
- runFlow:
    when:
      visible: "Enter a setup key"
    commands:
      - tapOn: "Enter a setup key"
- extendedWaitUntil:
    visible: "Enter account details"
    timeout: 10000
- tapOn:
    id: "auth_manual_issuer"
    point: "50%,70%"
- inputText: ${ISSUER}
- tapOn:
    id: "auth_manual_secret"
    point: "50%,70%"
- inputText: ${SECRET}
- tapOn:
    id: "auth_manual_account"
    point: "50%,70%"
- inputText: ${ACCOUNT}
- runFlow:
    when:
      true: ${NOTE != ''}
    commands:
      - tapOn:
          id: "auth_manual_notes"
          point: "50%,50%"
      - inputText: ${NOTE}
- runFlow:
    when:
      notVisible: "Save"
    commands:
      - scrollUntilVisible:
          element: "Save"
          direction: DOWN
          visibilityPercentage: 60
          centerElement: true
- tapOn: "Save"
- extendedWaitUntil:
    visible: ".*${ACCOUNT}.*"
    timeout: 30000
- runFlow:
    when:
      visible:
        id: auth_code_coach_mark_dismiss
    commands:
      - tapOn:
          id: auth_code_coach_mark_dismiss
          waitToSettleTimeoutMs: 500
- assertVisible: ${ISSUER}
