appId: ${APP_ID}
---
- runFlow:
    when:
      notVisible: "Use without backups"
    commands:
      - launchApp
- extendedWaitUntil:
    visible: "Use without backups"
    timeout: 120000
- tapOn: "Use without backups"
- assertVisible: "(?s)Warning.*You have chosen to proceed without backups.*"
- tapOn: "Ok"
- extendedWaitUntil:
    visible: "(?s)Setup your first.*account"
    timeout: 10000
